# MediaGrab

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  build.ps1  mediagrab.spec  pyproject.toml  requirements-dev.txt  run.ps1
app/: __init__.py  constants.py  exceptions.py  main.py
app/models/: __init__.py  application_settings.py  download_job.py  download_progress.py  media_info.py
app/parsers/: __init__.py  metadata_parser.py  progress_parser.py
app/services/: binary_service.py  bootstrap_service.py  bootstrap_worker.py  disk_service.py  download_service.py  format_service.py  history_service.py  metadata_service.py  notification_service.py  queue_service.py  report_service.py  settings_service.py  taskbar_service.py  update_service.py
app/ui/: about_dialog.py  batch_dialog.py  download_item_widget.py  first_run_dialog.py  history_widget.py  log_panel.py  main_window.py  player_dialog.py  settings_dialog.py  sidebar.py  theme.py  update_dialog.py  widgets.py
app/utils/: atomic_json.py  filename.py  logging_utils.py  paths.py  url_validator.py
assets/: make_icon.py
installer/: MediaGrab.iss  build-installer.ps1  sign.ps1  trust-cert.ps1
tests/: conftest.py  test_binary_service.py  test_bootstrap_service.py  test_features.py  test_filename.py  test_format_service.py  test_log_cleanup.py  test_logging_utils.py  test_main_window.py  test_media_resolution.py  test_metadata_parser.py  test_progress_parser.py  test_queue_service.py  test_report_service.py  test_storage.py  test_taskbar_service.py  test_update_service.py  test_url_validator.py
(+8 files in other folders)
