[project]
name = "mediagrab"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["PySide6>=6.8,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 160

[tool.ruff.lint]
select = ["E9", "F"]

[tool.black]
target-version = ["py312"]
line-length = 160
